@@ -243,7 +243,7 @@ static
 SCIP_RETCODE tryFixVar(
    SCIP*                 scip,               /**< SCIP data structure */
    SCIP*                 subscip,            /**< sub-SCIP data structure */
-   SCIP_SOL*             sol,                /**< SCIP data structure */
+   SCIP_SOL*             sol,                /**< solution data structure */
    SCIP_Real*            potential,          /**< array with all potential values */
    SCIP_Real*            slack,              /**< array with all slack values */
    SCIP_VAR*             var,                /**< variable to be fixed? */
@@ -258,6 +258,7 @@ SCIP_RETCODE tryFixVar(
    SCIP_COL* col;
    SCIP_Real* vals;
    SCIP_Real alpha;
+   SCIP_Real solval;
    int nrows;
    int i;
    int sgn;
@@ -274,11 +275,13 @@ SCIP_RETCODE tryFixVar(
    *infeasible = TRUE;
    *fixed = FALSE;
 
-   if( SCIPisFeasLT(scip, SCIPgetSolVal(scip, sol, var), SCIPvarGetLbGlobal(var)) )
+   solval = SCIPgetSolVal(scip, sol, var);
+
+   if( SCIPisFeasLT(scip, solval, SCIPvarGetLbGlobal(var)) )
    {
       return SCIP_OKAY;
    }
-   if( SCIPisFeasGT(scip, SCIPgetSolVal(scip, sol, var), SCIPvarGetUbGlobal(var)) )
+   if( SCIPisFeasGT(scip, solval, SCIPvarGetUbGlobal(var)) )
    {
       return SCIP_OKAY;
    }
@@ -290,11 +293,11 @@ SCIP_RETCODE tryFixVar(
 
    if( NULL == rows )
    {
-      SCIP_CALL( SCIPfixVar(subscip, subvar, SCIPgetSolVal(scip, sol, var),
+      SCIP_CALL( SCIPfixVar(subscip, subvar, solval,
                infeasible, fixed) );
       assert(!*infeasible && *fixed);
       heurdata->nvarfixed++;
-      SCIPdebugMsg(scip,"Variable %s is fixed to %g\n",SCIPvarGetName(var), SCIPgetSolVal(scip, sol, var));
+      SCIPdebugMsg(scip,"Variable %s is fixed to %g\n",SCIPvarGetName(var), solval);
       return SCIP_OKAY;
    }
    assert(NULL != rows);
@@ -359,8 +362,7 @@ SCIP_RETCODE tryFixVar(
       }
    }
 
-   SCIP_CALL( SCIPfixVar(subscip, subvar, SCIPgetSolVal(scip, sol, var),
-         infeasible, fixed) );
+   SCIP_CALL( SCIPfixVar(subscip, subvar, solval, infeasible, fixed) );
    assert(!*infeasible && *fixed);
    heurdata->nvarfixed++;
    SCIPdebugMsg(scip,"Variable %s is fixed to %g\n",SCIPvarGetName(var),
@@ -400,6 +402,14 @@ SCIP_RETCODE checkCands(
    for( i = 0; i < nfracvars; ++i)
    {
       SCIP_Real value = SCIPgetSolVal(scip, sol, vars[i]);
+
+      if( SCIPisInfinity(scip, REALABS(value)) )
+      {
+         *success = FALSE;
+         SCIPdebugMsg(scip, "Variable with infinite solution value");
+
+         return SCIP_OKAY;
+      }
       if( !SCIPisFeasIntegral(scip, value) )
       {
          if( roundit )
@@ -425,6 +435,19 @@ SCIP_RETCODE checkCands(
          }
       }
    }
+
+   /* ensure that no other variables have infinite LP solution values */
+   for( ; i < nvars; ++i )
+   {
+      if( SCIPisInfinity(scip, REALABS(SCIPgetSolVal(scip, sol, vars[i]))) )
+      {
+         *success = FALSE;
+         SCIPdebugMsg(scip, "Variable with infinite solution value");
+
+         return SCIP_OKAY;
+      }
+   }
+
    SCIPdebugMsg(scip, "All variables rounded.\n");
    return SCIP_OKAY;
 }
